tests/dataset/tpc-ds/compiler/rust/q56.error
rustc: exit status 1
warning: type `Store_sale` should have an upper camel case name
 --> /tmp/q56.rs:3:8
  |
3 | struct Store_sale {
  |        ^^^^^^^^^^ help: convert the identifier to upper camel case: `StoreSale`
  |
  = note: `#[warn(non_camel_case_types)]` on by default

warning: type `Catalog_sale` should have an upper camel case name
 --> /tmp/q56.rs:9:8
  |
9 | struct Catalog_sale {
  |        ^^^^^^^^^^^^ help: convert the identifier to upper camel case: `CatalogSale`

warning: type `Web_sale` should have an upper camel case name
  --> /tmp/q56.rs:15:8
   |
15 | struct Web_sale {
   |        ^^^^^^^^ help: convert the identifier to upper camel case: `WebSale`

error[E0423]: expected function, found macro `concat`
  --> /tmp/q56.rs:83:17
   |
83 |     let union = concat(ss, cs, ws);
   |                 ^^^^^^ not a function
   |
help: use `!` to invoke the macro
   |
83 |     let union = concat!(ss, cs, ws);
   |                       +

error[E0609]: no field `total` on type `&i32`
  --> /tmp/q56.rs:84:492
   |
84 | ...12 = Vec::new();for x in &g.clone().items { tmp12.push(x.total); } tmp12 }) }); } result };
   |                                                             ^^^^^ unknown field

error[E0308]: mismatched types
  --> /tmp/q56.rs:86:65
   |
86 |     assert!(result == vec![Result6 { i_item_id: 1, total_sales: 60.0 }]);
   |                                                                 ^^^^ expected `i32`, found floating-point number

error: aborting due to 3 previous errors; 3 warnings emitted

Some errors have detailed explanations: E0308, E0423, E0609.
For more information about an error, try `rustc --explain E0308`.
